fixed hidden overflow text

--- a/css/module2.css
+++ b/css/module2.css
@@ -81,7 +81,6 @@ h3
         float: left;
         border: 1px solid black;
         background-color: gray;
-        height: 300px;
         overflow: hidden;
         margin-right: 1.33%;
     }
@@ -159,7 +158,6 @@ h3
         float: left;
         border: 1px solid black;
         background-color: gray;
-        height: 300px;
         overflow: hidden;
         margin-right: 1%;
         margin-top: 1%;
@@ -237,7 +235,6 @@ h3
         float: left;
         border: 1px solid black;
         background-color: gray;
-        height: 300px;
         overflow: hidden;
         margin-right: 1%;
         margin-top: 1%;
